apps/production/sinan-gotth-finance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: sinan-gotth-finance
  labels:
    app: sinan-gotth-finance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sinan-gotth-finance
  template:
    metadata:
      labels:
        app: sinan-gotth-finance
    spec:
      containers:
        - name: sinan-gotth-finance
          image: ghcr.io/pt-sinan-akbar/gotth-finance-app:497b788
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
