apps/production/sinan-gotth-finance/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: sinan-gotth-finance-service
spec:
  selector:
    app: sinan-gotth-finance
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
