apps/production/sinan-gotth-finance/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sinan-gotth-finance
  namespace: envoy
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy
      sectionName: sinan-gotth-finance
  hostnames:
    - gotth-finance.sinanaas.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sinan-gotth-finance-service
          namespace: prod
          port: 80
